--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularCalendar</title>
-  <base href="/">
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <base href="./">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <title>Angular 5 Weekly Calendar Quick Start Project</title>
+        
+        <!-- <style type="text/css">
+            p, body, td { font-family: Tahoma, Arial, Helvetica, sans-serif; font-size: 10pt; }
+            body { padding: 0px; margin: 0px; background-color: #ffffff; }
+            a { color: #1155a3; }
+            .space { margin: 10px 0px 10px 0px; }
+            .main { padding: 10px }
+        </style>		 -->
+    </head>
+    <body>
+        <div class="main">
+            <app-root>Loading...</app-root>
+        </div>
+
+    </body>
 </html>
